--- a/.envrc
+++ b/.envrc
@@ -1,4 +1,10 @@
 PATH_add $PWD/bin
 echo USAGE:
-echo \  ytb [youtube-id]
+echo \  yyy [youtube-id]
 
+# source_up
+export NODE_VERSIONS=~/.nvm/versions/node
+export NODE_VERSION_PREFIX='v'
+use node 10.16
+layout_node
+nrm use npm
