--- a/package.json
+++ b/package.json
@@ -4,17 +4,21 @@
   "description": "```   youtube-dl nEpF6ISYdM0 -o 'test.%(ext)s' -x --audio-format mp3 --audio-quality 320k ```",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpileOnly ./lib/dev.ts",
+    "dev": "ts-node-dev --type-check --respawn --transpileOnly ./lib/dev.ts",
     "prod": "tsc && node ./build/tag.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "chalk": "^2.4.2",
     "node-id3": "^0.1.11",
-    "ts-node-dev": "^1.0.0-pre.40",
-    "typescript": "^3.5.3",
     "unirest": "^0.6.0",
     "yaml": "^1.6.0"
+  },
+  "devDependencies": {
+    "@types/node": "^12.7.2",
+    "ts-node-dev": "^1.0.0-pre.40",
+    "typescript": "^3.5.3"
   }
 }
