--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --type-check --respawn --transpileOnly ./lib/dev.ts",
-    "prod": "tsc && node ./build/tag.js",
+    "sync": "tsc && node ./build/dev.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
